--- a/webContext/prv/login.html
+++ b/webContext/prv/login.html
@@ -8,23 +8,23 @@
 <meta
 	content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
 	name="viewport" />
-<title>KIFT</title>
+<title>RJSZZ</title>
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/overrall.min.css">
-<link rel="icon" type="image/x-icon" href="css/icon.png" />
+<link rel="icon" type="image/x-icon" href="css/archlinux.png" />
 <!--[if lt IE 9]>
       <script src="js/html5shiv.min.js"></script>
       <script src="js/respond.min.js"></script>
 <![endif]-->
 </head>
 
-<body>
+<body style="background: url(ArchLinux.png) no-repeat top left;background- size:cover;background-attachment: fixed;background-size: 100%;">
 	<div class="container">
 
 		<div class="row">
 			<div class="col-md-12">
 				<div class="titlebox">
-					<span class="titletext"><em> 青阳网络文件传输系统 <small><span
+					<span class="titletext" style="color: #bdd6d8"><em> RJSZZ <small><span
 								class="graytext">KIFT</span></small></em></span>
 				</div>
 				<hr />
@@ -33,8 +33,8 @@
 
 		<div class="row">
 			<div class="col-md-4 col-md-offset-4">
-				<p class="centerText" style="font-size: 30px; color: #4D4D4D">
-					<strong>欢迎使用青阳网络文件传输系统</strong><em>KIFT</em>
+				<p class="centerText" style="font-size: 30px; color: #bdd6d8">
+					<strong>Nothing is All</strong>
 				</p>
 				<p class="centerText" style="font-size: 18px; color: #9C9C9C">
 					<span class="glyphicon glyphicon-user"></span> 您需要登录以进入系统
